# agentic-rag-assistant

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pyproject.toml
agentic-rag-assistant/: CHANGELOG.md  README.md
app/: main.py
app/api/: router.py
app/api/v1/endpoints/: debug.py  health.py  root.py
app/core/: application.py  lifespan.py  logging.py  settings.py
app/dependencies/: services.py
app/exceptions/: handlers.py
app/middleware/: request_logger.py
app/schemas/: health.py  root.py
app/services/: health_service.py
tests/: test_health.py  test_root.py
