[project]
name = "agentic-rag-assistant"
version = "0.1.0"
description = "Production-grade Agentic RAG Assistant built with FastAPI, LangGraph, LangChain, ChromaDB, OpenAI, and Gemini."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Vasudha Thorat" }
]

dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]

dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "httpx>=0.28.1",

    "ruff>=0.12.0",
    "black>=25.1.0",
    "mypy>=1.17.0",

    "pre-commit>=4.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "B008",
]

[tool.pytest.ini_options]

testpaths = [
    "tests"
]

pythonpath = [
    "."
]

addopts = "-v"

[tool.mypy]
python_version = "3.12"

warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]